<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="#FF0266"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/enlighten"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"

        android:text="@string/enlighten"
        android:textColor="#ffffff"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/your"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="@string/your"
        android:textColor="#ffffff"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/pocket"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:text="@string/pocket"
        android:textSize="35sp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"/>
</LinearLayout>