<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iseeproject.FirstActivity">

    <TextView
        android:id="@+id/warningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/too_many_attempts_wait_for_60_seconds"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="279dp"
        android:text="@string/smartbucks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/warningText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="654dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/SmartBucks"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="247dp"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/warningText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="121dp"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/warningText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>